<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotifyING</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Account settings</string>
    <string name="usercategory">User settings</string>
    <string name="pref_key_username_title">Username</string>
    <string name="pref_key_username_default">18820262Y</string>
    <string name="pref_key_birthday_title">Birthday</string>
    <string name="pref_key_birthday_default">1/01/1980</string>
    <string name="notification_example_title">Notification</string>
    <string name="notification_example_text">Reuse is een homo</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="home_tab">Home</string>
    <string name="notifications_tab">Notifications</string>
    <string name="settings_tab">Settings</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="category_balance">Balance notifications</string>
    <string name="pref_key_balancemin">notify on balance lower than</string>
    <string name="pref_key_balancemin_default">100</string>
    <string name="enabledString">notifications enabled</string>
    <string name="category_notifications_enable">General</string>
    <string name="category_general">General</string>
    <string name="category_sendmin">Sending notifications</string>
    <string name="category_send">Sending notifications</string>
    <string name="pref_key_sendmin">notify when sending more than</string>
    <string name="pref_key_sendmin_default">100</string>

</resources>
