<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_general"
        android:key="pref_key_general">
        <CheckBoxPreference
            android:key="pref_key_notifications_enabled"
            android:title="@string/enabledString"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_balance"
        android:key="pref_key_category_balance">
        <CheckBoxPreference
            android:key="pref_key_balancemin_enabled"
            android:title="@string/enabledString"
            android:defaultValue="true"
            android:dependency="pref_key_notifications_enabled"
            />
        <EditTextPreference
            android:key="pref_key_balancemin"
            android:title="@string/pref_key_balancemin"
            android:defaultValue="@string/pref_key_balancemin_default"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:dependency="pref_key_balancemin_enabled"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_send"
        android:key="pref_key_category_send"
        android:dependency="pref_key_notifications_enabled">
        <CheckBoxPreference
            android:key="pref_key_sendmin_enabled"
            android:title="@string/enabledString"
            android:defaultValue="true"
            android:dependency="pref_key_notifications_enabled"
            />
        <EditTextPreference
            android:key="pref_key_sendmin"
            android:title="@string/pref_key_sendmin"
            android:defaultValue="@string/pref_key_sendmin_default"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:dependency="pref_key_sendmin_enabled"
            />
    </PreferenceCategory>
</PreferenceScreen>